# qipi

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
src/: commands.rs  config.rs  main.rs
src/cli/: app.rs  detector.rs  init.rs  mod.rs  struct.rs
src/cli/commands/: actions.rs  skeletons.rs
src/core/: mod.rs
src/core/client/: http.rs  mod.rs  response.rs
src/core/package/: lockfile.rs  mod.rs  tarball.rs
src/core/package/cache/: link.rs  mod.rs  tarball.rs
src/manager/js/: obtain.rs
src/manager/js/lockfile/: cross.rs  qp.rs
