[package]
name = "qipi"
description = "🦉 The universal package manager."
authors = ["Nehuén/Neth"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2"
spinoff = "0.8.0"
inquire = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rkyv = { version = "=0.7.44", features = ["validation"] }
yaml-rust2 = "0.8"